# matrix-partition

./: README.md  autopartition.py  hamiltonians.py  ising.py  operators.py  pyproject.toml  xxz.py  xyz.py
examples/: ising.py  operators.py  xxz.py
src/: autopartition.py
src/matrix_partition/: autopartition.py  functions.py
