[project]
name = "matrix-partition-thenoursehorse"

version = "3.0.0"  # Required

description = "Automatically partition a matrix into a block diagonal form with respect to symmetries."

readme = "README.md"

requires-python = ">=3.7"

license = {file = "LICENSE"}

keywords = ["quantum", "symmetry", "automatic", "partition"]  # Optional

authors = [
  {name = "H. L. Nourse"}
]

dependencies = [ # Optional
  "numpy",
  "scipy"
]

[project.urls]
"Homepage" = "https://github.com/thenoursehorse/matrix-partition"

[tool.setuptools]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"