[project]
name = "matrix-partition"
version = "0.0.1"
description = "Automatically partition a matrix into a block diagonal form with respect to symmetries."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["quantum", "symmetry", "automatic", "partition"]
authors = [
  {name = "H. L. Nourse"}
]
dependencies = [
  "numpy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/thenoursehorse/matrix-partition"

[tool.setuptools]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"